[gd_scene load_steps=2 format=3 uid="uid://73m6oddv11f4"]

[ext_resource type="Script" path="res://ui/paws_menu.gd" id="1_gwaqh"]

[node name="paws_menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_gwaqh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -852.0
offset_top = -360.0
offset_right = 852.0
offset_bottom = 359.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="p_resume_btn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../p_quit_btn")
mouse_filter = 1
text = "Return to Game"

[node name="p_settings_btn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "Settings"

[node name="p_quit_btn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../p_resume_btn")
mouse_filter = 1
text = "Quit"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/p_resume_btn" to="." method="_on_p_resume_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/p_settings_btn" to="." method="_on_p_settings_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/p_quit_btn" to="." method="_on_p_quit_btn_pressed"]
